# yafl

./: .gitignore  MANIFEST.in  README.md  Readme.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
doc/: AdaptiveCorrection.html  AdaptiveCorrection.md  C-Manual.md  Python-Manual.md  Readme.md  UsingEKFTricksWithSPKF.html  scratchpad.ipynb
doc/src/: AdaptiveCorrection.ipynb  UsingEKFTricksWithSPKF.ipynb  scratchpad.ipynb
src/: yafl.c  yafl.h  yafl_math.c  yafl_math.h  yaflpy.pyx  yakf.c  yakf.h  yakf_math.c  yakf_math.h  yakf_py.pyx  yakf_py_compile.py  yakf_py_compile_robust.py  yakf_py_compile_unscented.py  yakf_py_compile_unscented_adaptive.py
src/configpy/: yafl_config.h
src/yaflpy/: immconst.c  yafl_config.h  yaflpy.pyx  yaflpy.pyxbld
tests/projects/: CppCheckResults.xml  hdf5_test.cbp  yafl_hdf_tests.workspace
tests/projects/ada_bierman/: hdf5_test.cbp
tests/projects/ada_joseph/: hdf5_test.cbp
tests/projects/ada_rob_bierman/: hdf5_test.cbp
tests/projects/ada_rob_joseph/: hdf5_test.cbp
tests/projects/ada_ukf/: hdf5_test.cbp
tests/src/: UDEKF.py  ab_tests.py  ada_bierman.c  ada_joseph.c  ada_rob_bierman.c  ada_rob_joseph.c  ada_rob_ukf_bierman.c  ada_ukf.c  ada_ukf_bierman.c  bierman.c  case1.py  create_h5.py  create_test_data.py  cyexp.pyx  cyexp_c.c  cyexp_c.h  cyexp_test.py  hdf5utils.c  hdf5utils.h  imm.c  joseph.c  main.c  main.c.bak  rob_bierman.c  rob_joseph.c  rob_ukf_bierman.c  test003.py  test012.py  test016.py  test019.py  test021.py  test024.py  test025.py  test026.py  test027.py  test028.py  test029.py  test030.py  test031.py  test032.py  (+45 more)
(+123 files in other folders)
