[metadata]
name = yaflpy
version = 0.40.0
platforms = any

description = Yet Another Filtering Library
long_description = file: README.md
long_description_content_type = text/markdown

license = Apache License, Version 2.0
license_file = LICENSE

author = anonimous
author_email = shkolnick-kun@gmail.com

url = https://github.com/shkolnick-kun/yafl
download_urls = https://github.com/shkolnick-kun/yafl
project_urls =
	Documentation = https://github.com/shkolnick-kun/yafl
	Code = https://github.com/shkolnick-kun/yafl
	Issue tracker = https://github.com/shkolnick-kun/yafl/issues

classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Software Development :: Embedded Systems
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
